--- a/app/src/main/res/drawable/right_bg.xml
+++ b/app/src/main/res/drawable/right_bg.xml
@@ -7,6 +7,8 @@
             <size
                 android:width="80dp"
                 android:height="80dp" />
+            <stroke android:width="0.5dp"
+                android:color="@color/colorPrimary"/>
             <gradient
                 android:angle="270"
                 android:startColor="@color/grey"
