--- a/app/src/main/res/layout/field_visit_recycler.xml
+++ b/app/src/main/res/layout/field_visit_recycler.xml
@@ -210,7 +210,8 @@
     <RelativeLayout
         android:id="@+id/rl1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_10sdp">
         <RelativeLayout
             android:id="@+id/image_list_layout"
             android:layout_marginRight="@dimen/_5sdp"
