--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -44,7 +44,7 @@
                     android:layout_centerInParent="true"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:padding="3dp"
-                    android:text="Rural Development"
+                    android:text="TpTax Department"
                     android:textColor="@android:color/black"
                     android:textSize="17sp"
                     android:textStyle="bold"
@@ -57,6 +57,7 @@
                     android:layout_below="@+id/rural"
                     android:layout_centerInParent="true"
                     android:padding="3dp"
+                    android:visibility="gone"
                     android:text=" &amp;"
                     android:textColor="@android:color/black"
                     android:textSize="17sp"
@@ -70,6 +71,7 @@
                     android:layout_below="@+id/amp"
                     android:layout_centerInParent="true"
                     android:padding="3dp"
+                    android:visibility="gone"
                     android:text="Panchayat Raj Department"
                     android:textColor="@android:color/black"
                     android:textSize="17sp"
