--- a/app/src/main/res/layout/pending_screen.xml
+++ b/app/src/main/res/layout/pending_screen.xml
@@ -79,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/cornered_border_bg_strong"
-                android:layout_margin="10dp"
+                android:layout_marginTop="10dp"
                 android:elevation="@dimen/_6sdp">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -99,7 +99,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:textColor="@color/white"
-                            android:textSize="13sp"
+                            android:textSize="15sp"
                             android:id="@+id/new_trader"
                             android:text="New Traders"
                             android:fontFamily="sans-serif" />
@@ -117,7 +117,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="13sp"
+                            android:textSize="15sp"
                             android:id="@+id/field_visit"
                             android:text="Field Visit"
                             android:fontFamily="sans-serif" />
@@ -138,7 +138,7 @@
                         android:layout_height="match_parent"
                         android:id="@+id/new_trader_recycler"
                         android:scrollbarSize="1dp"
-                        android:padding="@dimen/margin_left_20dp"
+                        android:padding="5dp"
                         android:visibility="visible"
                         android:scrollbars="vertical"/>
                     <androidx.recyclerview.widget.RecyclerView
@@ -146,7 +146,7 @@
                         android:layout_height="match_parent"
                         android:id="@+id/field_visit_recycler"
                         android:scrollbarSize="1dp"
-                        android:padding="@dimen/margin_left_20dp"
+                        android:padding="5dp"
                         android:visibility="gone"
                         android:scrollbars="vertical"/>
 
