--- a/app/src/main/res/layout/field_visit_recycler.xml
+++ b/app/src/main/res/layout/field_visit_recycler.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/cornered_border_bg"
+    android:background="@drawable/cornered_rect_lite_bg"
     android:layout_margin="5dp"
     android:elevation="@dimen/_6sdp">
 
@@ -29,27 +29,37 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textColor="@color/white"
-                    android:textSize="15sp"
+                    android:textColor="@color/subscription_type_red_color"
+                    android:textSize="17sp"
+                    android:padding="3dp"
+                    android:drawablePadding="8dp"
+                    android:drawableLeft="@drawable/ic_trash"
                     android:id="@+id/delete"
                     android:text="Delete"
                     android:fontFamily="sans-serif" />
 
             </RelativeLayout>
+            <View
+                android:layout_width="0.5dp"
+                android:layout_height="match_parent"
+                android:background="@color/dashboard_line_dark"/>
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:id="@+id/right"
-                android:background="@drawable/upload_bg"
+                android:background="@drawable/delete_bg"
                 android:layout_weight="1">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textColor="@color/white"
-                    android:textSize="15sp"
+                    android:textColor="@color/account_status_green_color"
+                    android:textSize="17sp"
+                    android:padding="3dp"
                     android:id="@+id/upload"
+                    android:drawablePadding="8dp"
+                    android:drawableLeft="@drawable/ic_upload"
                     android:text="Upload"
                     android:fontFamily="sans-serif" />
 
@@ -208,6 +218,7 @@
     </RelativeLayoutw>
 -->
     <RelativeLayout
+        android:layout_margin="@dimen/_5sdp"
         android:id="@+id/rl1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -221,6 +232,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView
+                android:padding="@dimen/_5sdp"
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:id="@+id/imge_list"
@@ -233,65 +245,48 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="8"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:weightSum="3"
+                android:orientation="horizontal">
 
                 <TextView
-
                     style="@string/font_circular_book"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:padding="5dp"
                     android:text="Owner Name"
-                    android:textAlignment="center"
                     android:textColor="#000"
                     android:textSize="18sp" />
 
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
                 <TextView
 
                     style="@string/font_circular_book"
-                    android:layout_width="wrap_content"
-
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:gravity="center_vertical"
                     android:padding="10dp"
                     android:text=":"
                     android:textColor="#000"
                     android:textSize="18sp" />
 
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="8"
-                android:gravity="center"
-                android:orientation="vertical">
-
                 <TextView
                     android:id="@+id/nameValue"
                     style="@string/font_circular_book"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.4"
+                    android:gravity="center_vertical"
                     android:padding="10dp"
                     android:text="Owner Name"
-                    android:textAlignment="inherit"
                     android:textColor="#000"
                     android:textSize="18sp" />
+
             </LinearLayout>
+
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -301,65 +296,50 @@
             android:id="@+id/ll2">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="8"
+                android:weightSum="3"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <TextView
 
                     style="@string/font_circular_book"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:padding="5dp"
+                    android:gravity="center_vertical"
                     android:text="Request ID"
-                    android:textAlignment="center"
                     android:textColor="#000"
                     android:textSize="18sp" />
 
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
                 <TextView
 
                     style="@string/font_circular_book"
-                    android:layout_width="wrap_content"
-
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
                     android:padding="10dp"
                     android:text=":"
                     android:textColor="#000"
                     android:textSize="18sp" />
 
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="8"
-                android:gravity="center"
-                android:orientation="vertical">
-
                 <TextView
                     android:id="@+id/codeValue"
                     style="@string/font_circular_book"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.8"
                     android:padding="10dp"
                     android:text="Request ID"
                     android:textAlignment="inherit"
                     android:textColor="#000"
                     android:textSize="18sp" />
+
+
             </LinearLayout>
+
         </LinearLayout>
         <LinearLayout
             android:layout_below="@+id/ll2"
@@ -369,65 +349,52 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="8"
+                android:weightSum="3"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <TextView
 
                     style="@string/font_circular_book"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:padding="5dp"
                     android:text="Tax Type"
-                    android:textAlignment="center"
+                    android:gravity="center_vertical"
                     android:textColor="#000"
                     android:textSize="18sp" />
 
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
                 <TextView
 
                     style="@string/font_circular_book"
-                    android:layout_width="wrap_content"
-
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
                     android:padding="10dp"
                     android:text=":"
                     android:textColor="#000"
                     android:textSize="18sp" />
 
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="8"
-                android:gravity="center"
-                android:orientation="vertical">
-
                 <TextView
                     android:id="@+id/taxTypeValue"
                     style="@string/font_circular_book"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.8"
                     android:padding="10dp"
                     android:text="Current Status"
                     android:textAlignment="inherit"
                     android:textColor="#000"
                     android:textSize="18sp" />
+
+
             </LinearLayout>
+
+
+
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -436,65 +403,51 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="8"
+                android:weightSum="3"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <TextView
 
                     style="@string/font_circular_book"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:padding="5dp"
                     android:text="Current Status"
-                    android:textAlignment="center"
                     android:textColor="#000"
                     android:textSize="18sp" />
-
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
                 <TextView
 
                     style="@string/font_circular_book"
-                    android:layout_width="wrap_content"
-
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:gravity="center_vertical"
                     android:padding="10dp"
                     android:text=":"
                     android:textColor="#000"
                     android:textSize="18sp" />
 
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="8"
-                android:gravity="center"
-                android:orientation="vertical">
-
                 <TextView
                     android:id="@+id/status_filed"
                     style="@string/font_circular_book"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.8"
+                    android:gravity="center_vertical"
                     android:padding="10dp"
                     android:text="Current Status"
-                    android:textAlignment="inherit"
                     android:textColor="#000"
                     android:textSize="18sp" />
+
+
             </LinearLayout>
+
+
         </LinearLayout>
 
     </RelativeLayout>
