--- a/app/src/main/res/layout/trade_recycler.xml
+++ b/app/src/main/res/layout/trade_recycler.xml
@@ -18,7 +18,7 @@
             android:textColor="@color/white"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:textSize="13sp"
+            android:textSize="16sp"
             android:id="@+id/nameValue"
             android:background="@drawable/new_round_cornered_bg"
             android:text="Trader Name"
@@ -34,12 +34,19 @@
         android:padding="10dp"
         >
 
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:padding="3dp"
+            android:id="@+id/rel1">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:gravity="start"
-            android:textSize="13sp"
+            android:textSize="16sp"
             android:textColor="@color/border_line"
             android:id="@+id/code"
             android:text="Code"
@@ -47,41 +54,55 @@
 
         <TextView
             android:id="@+id/codec"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="0.1"
+            android:layout_height="match_parent"
+            android:gravity="start"
+            android:textSize="16sp"
             android:textColor="@color/border_line"
             android:layout_toRightOf="@+id/paymentDate"
             android:fontFamily="sans-serif"
-            android:gravity="start"
             android:text=" : "
-            android:textSize="13sp" />
+            />
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1.3"
+            android:layout_height="match_parent"
             android:gravity="start"
+            android:layout_marginLeft="5dp"
+            android:textSize="16sp"
             android:textColor="@color/border_line"
-            android:textSize="13sp"
             android:layout_toRightOf="@+id/codec"
             android:id="@+id/codeValue"
-            android:text="Trader code"
+            android:text="Trader code "
             android:fontFamily="sans-serif" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:padding="3dp"
+            android:layout_below="@+id/rel1"
+            android:id="@+id/rel2">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:gravity="start"
+            android:textSize="16sp"
             android:layout_marginTop="5dp"
-            android:textSize="13sp"
             android:textColor="@color/border_line"
             android:id="@+id/mobile"
             android:layout_below="@+id/code"
             android:text="Mobile"
             android:fontFamily="sans-serif" />
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="0.1"
+            android:layout_height="match_parent"
             android:gravity="start"
-            android:textSize="13sp"
+            android:textSize="16sp"
             android:textColor="@color/border_line"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/paymentDate"
@@ -90,23 +111,34 @@
             android:text=" : "
             android:fontFamily="sans-serif" />
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1.9"
+            android:layout_height="match_parent"
             android:gravity="start"
+            android:layout_marginLeft="5dp"
+            android:textSize="16sp"
             android:textColor="@color/border_line"
-            android:textSize="13sp"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/mobilec"
             android:layout_below="@+id/code"
             android:id="@+id/mobileValue"
             android:text="Mobile No"
             android:fontFamily="sans-serif" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:padding="3dp"
+            android:layout_below="@+id/rel2"
+            android:id="@+id/rel3">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:gravity="start"
-            android:textSize="13sp"
+            android:textSize="16sp"
             android:textColor="@color/border_line"
             android:layout_marginTop="5dp"
             android:id="@+id/paymentDate"
@@ -114,10 +146,11 @@
             android:text="PaymentDate"
             android:fontFamily="sans-serif" />
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="0.1"
+            android:layout_height="match_parent"
             android:gravity="start"
-            android:textSize="13sp"
+            android:textSize="16sp"
             android:layout_marginTop="5dp"
             android:textColor="@color/border_line"
             android:layout_toRightOf="@+id/paymentDate"
@@ -126,10 +159,12 @@
             android:text=" : "
             android:fontFamily="sans-serif" />
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1.9"
+            android:layout_height="match_parent"
             android:gravity="start"
-            android:textSize="13sp"
+            android:layout_marginLeft="5dp"
+            android:textSize="16sp"
             android:textColor="@color/border_line"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/paymentdatec"
@@ -137,17 +172,18 @@
             android:id="@+id/paymentDateValue"
             android:text="paymentDate"
             android:fontFamily="sans-serif" />
+        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="60dp"
+            android:minWidth="70dp"
             android:id="@+id/paymentStatus"
             android:gravity="center"
             android:layout_alignParentEnd="true"
             android:background="@drawable/round_green_bg"
             android:layout_marginEnd="5dp"
             android:padding="5dp"
-            android:textSize="12sp"
+            android:textSize="15sp"
             android:textColor="@color/white"
             android:text="UnPaid" />
 
