--- a/app/src/main/res/layout/existing_trade_licence.xml
+++ b/app/src/main/res/layout/existing_trade_licence.xml
@@ -22,6 +22,8 @@
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:elevation="0dp"
+            android:translationZ="0.1dp"
             android:background="@android:color/transparent">
 
             <androidx.appcompat.widget.Toolbar
