--- a/app/src/main/res/layout/field_visit.xml
+++ b/app/src/main/res/layout/field_visit.xml
@@ -617,56 +617,46 @@
                             android:scaleType="fitCenter"></ImageView>
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:id="@+id/take_pic_layout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                         android:layout_gravity="right"
-                        android:onClick="@{()-> activity.image()}"
-                        android:layout_marginTop="@dimen/_25sdp"
-                        android:background="@drawable/white_background_left_two_corners"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/_8sdp">
-
-                        <TextView
-                            android:id="@+id/take_photo_tv"
-                            android:layout_width="match_parent"
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/fab"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="left"
-                            android:paddingLeft="5dp"
-                            android:paddingRight="5dp"
-                            android:text="Take Photo"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp"
-                            android:textStyle="normal"
-                            style="@string/font_normal" />
+                            android:layout_gravity="bottom|start"
+                            android:layout_margin="@dimen/fab_margin"
+                            app:backgroundTint="@color/colorPrimary"
+                            android:onClick="@{()-> activity.image()}"
+                            app:srcCompat="@drawable/camera_icon" />
 
-                    </LinearLayout>
-                    <LinearLayout
-                        android:id="@+id/view_pic_layout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                         android:layout_gravity="right"
-                        android:onClick="@{()-> activity.viewImage()}"
-                        android:layout_marginTop="@dimen/_25sdp"
-                        android:background="@drawable/white_background_left_two_corners"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/_8sdp">
-
-                        <TextView
-                            android:id="@+id/view_photo_tv"
-                            android:layout_width="match_parent"
+                        <LinearLayout
+                            android:id="@+id/take_pic_layout"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="left"
-                            android:paddingLeft="5dp"
-                            android:paddingRight="5dp"
-                            android:text="View Image"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp"
-                            android:textStyle="normal"
-                            style="@string/font_normal" />
+                            android:layout_gravity="right"
+                            android:layout_centerVertical="true"
+                            android:layout_alignParentRight="true"
+                            android:onClick="@{()-> activity.viewImage()}"
+                            android:background="@drawable/white_background_left_two_corners"
+                            android:orientation="horizontal"
+                            android:padding="@dimen/_8sdp">
 
-                    </LinearLayout>
+                            <TextView
+                                android:id="@+id/take_photo_tv"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="left"
+                                android:paddingLeft="5dp"
+                                android:paddingRight="5dp"
+                                android:text="View Image"
+                                android:textColor="@android:color/black"
+                                android:textSize="18sp"
+                                android:textStyle="normal"
+                                style="@string/font_normal" />
+
+                        </LinearLayout>
+                    </RelativeLayout>
 
 
 
@@ -676,7 +666,7 @@
                         android:layout_height="@dimen/_40sdp"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginLeft="@dimen/margin"
-                        android:layout_marginTop="@dimen/_40sdp"
+                        android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginRight="@dimen/margin"
                         android:layout_marginBottom="@dimen/_40sdp"
                         android:background="@drawable/click_here"
