--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -269,32 +269,33 @@
         <RelativeLayout
             android:id="@+id/progress_bar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent">
             <RelativeLayout
                 android:background="@drawable/progress_bg"
                 android:layout_centerInParent="true"
-                android:layout_width="75dp"
+                android:layout_width="wrap_content"
                 android:layout_height="85dp"
                 android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:paddingTop="10dp">
                 <ImageView
                     android:id="@+id/spinnerImageView"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="20dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_centerInParent="true"
-                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentTop="true"
                     android:background="@drawable/spinner" />
 
                 <TextView
                     android:id="@+id/message"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
+                    android:layout_alignParentBottom="true"
                     android:layout_centerInParent="true"
                     android:text="Loading..."
-                    android:textSize="12sp"
+                    android:textSize="15sp"
                     android:textAlignment="center"
                     android:textColor="@android:color/white"
                     />
