--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -1,38 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="75dp"
+<RelativeLayout android:id="@+id/progress_bar"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout android:background="@drawable/progress_bg"
+    android:layout_centerInParent="true"
+    android:layout_width="wrap_content"
     android:layout_height="85dp"
-    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center"
-    android:background="@drawable/progress_bg"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
     android:paddingBottom="10dp"
-
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:paddingTop="10dp">
-
-
-
     <ImageView
         android:id="@+id/spinnerImageView"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="20dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_centerInParent="true"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:background="@drawable/spinner" />
 
     <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:text="Loading..."
-        android:textSize="12sp"
+        android:textSize="15sp"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-          />
-
+        />
+</RelativeLayout>
 </RelativeLayout>
